--- a/plugins/Interferometry/Interferometry1.ui
+++ b/plugins/Interferometry/Interferometry1.ui
@@ -107,7 +107,7 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="Interferometry.qrc">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
           <normaloff>:/icons/run.png</normaloff>:/icons/run.png</iconset>
         </property>
        </widget>
@@ -338,15 +338,19 @@
  </widget>
  <tabstops>
   <tabstop>image</tabstop>
+  <tabstop>doit</tabstop>
   <tabstop>minStretch</tabstop>
   <tabstop>maxStretch</tabstop>
+  <tabstop>numStretch</tabstop>
   <tabstop>minAngle</tabstop>
   <tabstop>maxAngle</tabstop>
-  <tabstop>numStretch</tabstop>
   <tabstop>numAngle</tabstop>
+  <tabstop>minThick</tabstop>
+  <tabstop>maxThick</tabstop>
+  <tabstop>numThick</tabstop>
  </tabstops>
  <resources>
-  <include location="Interferometry.qrc"/>
+  <include location="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
