--- a/plugins/Interferometry/Interferometry.ui
+++ b/plugins/Interferometry/Interferometry.ui
@@ -743,7 +743,7 @@
     <item>
      <widget class="QGroupBox" name="groupBox_3">
       <property name="title">
-       <string>Cutoff</string>
+       <string>Cutoff &amp;&amp; Rectangular crop</string>
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_5">
        <property name="leftMargin">
@@ -775,19 +775,6 @@
           <bool>true</bool>
          </property>
         </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
        </item>
        <item>
         <widget class="QLineEdit" name="cutoffMin">
@@ -828,6 +815,47 @@
          </property>
          <property name="neutrinoSave" stdset="0">
           <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_5">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="useCropRegion">
+         <property name="toolTip">
+          <string>use unwrap barrier line</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="neutrinoSave" stdset="0">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QToolButton" name="cropRegionTB">
+         <property name="toolTip">
+          <string>barrier Line</string>
+         </property>
+         <property name="text">
+          <string>...</string>
+         </property>
+         <property name="icon">
+          <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+           <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_6">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
          </property>
         </widget>
        </item>
@@ -986,7 +1014,6 @@
   <tabstop>display99</tabstop>
   <tabstop>cutoffMin</tabstop>
   <tabstop>cutoffMax</tabstop>
-  <tabstop>doCutoffB</tabstop>
  </tabstops>
  <resources>
   <include location="../Ghost_fringes/GhostFringes.qrc"/>
