--- a/src/neutrino.ui
+++ b/src/neutrino.ui
@@ -749,7 +749,7 @@
   </action>
   <action name="actionPoint">
    <property name="icon">
-    <iconset resource="../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/center.png</normaloff>:/icons/center.png</iconset>
    </property>
    <property name="text">
@@ -769,7 +769,7 @@
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/lockOpen.png</normaloff>
      <normalon>:/icons/lockClose.png</normalon>:/icons/lockOpen.png</iconset>
    </property>
@@ -782,7 +782,7 @@
   </action>
   <action name="actionPlugin">
    <property name="icon">
-    <iconset resource="../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/plugin.png</normaloff>:/icons/plugin.png</iconset>
    </property>
    <property name="text">
@@ -804,7 +804,7 @@
   </action>
   <action name="actionTranspose">
    <property name="icon">
-    <iconset resource="../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
    </property>
    <property name="text">
@@ -832,7 +832,7 @@
   </action>
   <action name="actionKeyboard_shortcut">
    <property name="text">
-    <string>Keyboard shortcut</string>
+    <string>Open by name</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+X</string>
@@ -940,7 +940,7 @@
   </customwidget>
  </customwidgets>
  <resources>
-  <include location="../../build-neutrino-Desktop_x86_darwin_generic_mach_o_32bit-Debug/src/qrc/icons.qrc"/>
+  <include location="../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
