--- a/plugins/XRD/IP.ui
+++ b/plugins/XRD/IP.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>294</width>
-    <height>74</height>
+    <width>316</width>
+    <height>34</height>
    </rect>
   </property>
   <property name="font">
@@ -18,7 +18,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="leftMargin">
     <number>4</number>
    </property>
@@ -33,7 +33,7 @@
    </property>
    <item>
     <widget class="QWidget" name="widget" native="true">
-     <layout class="QGridLayout" name="gridLayout" columnstretch="1,0,0,0,0,0,0,0">
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="1,0,0,0,0,0,0,0">
       <property name="leftMargin">
        <number>0</number>
       </property>
@@ -46,106 +46,7 @@
       <property name="bottomMargin">
        <number>0</number>
       </property>
-      <item row="2" column="1" colspan="3">
-       <widget class="QComboBox" name="IPmodel">
-        <property name="toolTip">
-         <string>IP model</string>
-        </property>
-        <property name="neutrinoSave" stdset="0">
-         <bool>true</bool>
-        </property>
-        <item>
-         <property name="text">
-          <string>No fading</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>MS</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>TR</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>SR</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>ND</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>MP</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="1" column="1">
-       <widget class="QToolButton" name="flipLR">
-        <property name="toolTip">
-         <string>Flip Left/Right</string>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-          <normaloff>:/icons/flipLeftRight.png</normaloff>:/icons/flipLeftRight.png</iconset>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="neutrinoSave" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QToolButton" name="flipUD">
-        <property name="toolTip">
-         <string>Flip Up/Down</string>
-        </property>
-        <property name="text">
-         <string>...</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-          <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-        <property name="neutrinoSave" stdset="0">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="7">
-       <widget class="QToolButton" name="crop">
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-         </font>
-        </property>
-        <property name="toolTip">
-         <string>Show cropped image</string>
-        </property>
-        <property name="text">
-         <string>Show</string>
-        </property>
-        <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
-          <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="0">
+      <item>
        <widget class="QDoubleSpinBox" name="angle">
         <property name="toolTip">
          <string>Rotation angle</string>
@@ -164,7 +65,47 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="3">
+      <item>
+       <widget class="QToolButton" name="flipLR">
+        <property name="toolTip">
+         <string>Flip Left/Right</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/flipLeftRight.png</normaloff>:/icons/flipLeftRight.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="neutrinoSave" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="flipUD">
+        <property name="toolTip">
+         <string>Flip Up/Down</string>
+        </property>
+        <property name="text">
+         <string>...</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/flipUpDown.png</normaloff>:/icons/flipUpDown.png</iconset>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="neutrinoSave" stdset="0">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QToolButton" name="transpose">
         <property name="toolTip">
          <string>Transpose</string>
@@ -173,7 +114,7 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
           <normaloff>:/icons/transpose.png</normaloff>:/icons/transpose.png</iconset>
         </property>
         <property name="checkable">
@@ -184,23 +125,14 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QSpinBox" name="fadeMin">
-        <property name="toolTip">
-         <string>Minutes between exposure and scan</string>
-        </property>
-        <property name="suffix">
-         <string> min</string>
-        </property>
-        <property name="maximum">
-         <number>99999</number>
-        </property>
-        <property name="neutrinoSave" stdset="0">
-         <bool>true</bool>
+      <item>
+       <widget class="Line" name="line">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
         </property>
        </widget>
       </item>
-      <item row="2" column="6">
+      <item>
        <widget class="QToolButton" name="saveImage">
         <property name="toolTip">
          <string>Save cropped image</string>
@@ -209,19 +141,12 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
           <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
         </property>
        </widget>
       </item>
-      <item row="1" column="4" rowspan="2">
-       <widget class="Line" name="line">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="7">
+      <item>
        <widget class="QToolButton" name="rectROI">
         <property name="toolTip">
          <string>Crop region window</string>
@@ -230,8 +155,27 @@
          <string>...</string>
         </property>
         <property name="icon">
-         <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
           <normaloff>:/icons/rect.png</normaloff>:/icons/rect.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="crop">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+         </font>
+        </property>
+        <property name="toolTip">
+         <string>Show cropped image</string>
+        </property>
+        <property name="text">
+         <string>Show</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
+          <normaloff>:/icons/eye.png</normaloff>:/icons/eye.png</iconset>
         </property>
        </widget>
       </item>
@@ -241,7 +185,7 @@
   </layout>
   <action name="actionSaveIPs">
    <property name="icon">
-    <iconset resource="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc">
+    <iconset resource="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc">
      <normaloff>:/icons/save.png</normaloff>:/icons/save.png</iconset>
    </property>
    <property name="text">
@@ -257,14 +201,10 @@
   <tabstop>flipLR</tabstop>
   <tabstop>flipUD</tabstop>
   <tabstop>transpose</tabstop>
-  <tabstop>fadeMin</tabstop>
-  <tabstop>IPmodel</tabstop>
   <tabstop>rectROI</tabstop>
-  <tabstop>saveImage</tabstop>
-  <tabstop>crop</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../build-neutrinoMaster-Brew-Debug/src/qrc/icons.qrc"/>
+  <include location="../../../build-neutrino-Qt_6_3_2_6_3_2_temporary-Debug/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
