--- a/plugins/Colorscale/Colorscale.ui
+++ b/plugins/Colorscale/Colorscale.ui
@@ -230,7 +230,7 @@
             </widget>
            </item>
            <item row="0" column="6">
-            <widget class="QSpinBox" name="percent">
+            <widget class="QDoubleSpinBox" name="percent">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
@@ -239,14 +239,11 @@
              <property name="toolTip">
               <string>Percent of pixels to show in the colorbar</string>
              </property>
-             <property name="suffix">
-              <string>%</string>
+             <property name="decimals">
+              <number>1</number>
              </property>
-             <property name="maximum">
-              <number>100</number>
-             </property>
-             <property name="value">
-              <number>100</number>
+             <property name="singleStep">
+              <double>0.500000000000000</double>
              </property>
             </widget>
            </item>
